[package]
name = "bluesky-moon-tracker"
version = "1.0.0"
description = "A Bluesky moon phase bot — lycanthropic, British, and slightly pagan."
license = "MIT"
edition = "2024"

[dependencies]
atrium-api = { version = "0.25", default-features = false, features = ["agent", "bluesky"] }
atrium-xrpc-client = { version = "0.5", default-features = false, features = ["reqwest-default-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.9"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
